# django-annotator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.md  README.rst  demo.py  manage.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: bump-release.yml  cz-bump.yml  pre-commit.yml
annotation/: models.py  serializers.py  test_views.py  urls.py  views.py
annotation/migrations/: 0001_initial.py  0002_auto_20160129_1311.py  0003_auto_20160129_1341.py  0004_auto_20160129_1528.py  0005_auto_20160129_1533.py
annotation/templates/annotation/: demo.html
annotator/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py  wsgi.py
annotator/migrations/: 0001_initial.py
annotator/settings/: base.py
annotator/templates/annotator/: demo.html
annotator/tests/: test_views.py
requirements/: base.txt
templates/: demo.html
