[tool.poetry]
name = "django-annotator"
packages = [
    { include = "annotator" },
]
version = "2.1.0"
description = "Implementation of annotatorjs's Storage/Search API."
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
drf-writable-nested = "^0.7.0"
django-filter = "^24.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
