[tool.poetry]
name = "django-annotator"
packages = [
    { include = "annotator" },
]
version = "2.2.0"
description = "Implementation of annotatorjs's Storage/Search API."
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
drf-writable-nested = "^0.7.0"
django-filter = "^24.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
commitizen = "^3.28.0"

[tool.commitizen]
version = "2.2.0"
bump_message = "bump: version $current_version → $new_version [skip ci]"
version_files = [
    "pwny/__init__.py:^__version__",
    "pyproject.toml:^version",
]

[tool.commitizen.customize]
bump_pattern = '^(BREAKING CHANGE|build|chore|docs|feat|fix|refactor|test)(\(.+\))?(!)?'
bump_map = {"!" = "MAJOR", build = "PATCH", chore = "PATCH", docs = "PATCH", feat = "MINOR", fix = "PATCH", refactor = "PATCH", test = "PATCH" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
